<resources>
    <string name="app_name">Genie</string>
    <string name="title_splash_genie">Genie</string>
    <string name="label_nav_home">Home</string>
    <string name="label_nav_transfer">Transfer</string>
    <string name="label_nav_library">Library</string>
    <string name="label_nav_downloads">Downloads</string>
    <string name="label_nav_children">@string/title_children</string>
    <string name="label_nav_settings">Settings</string>
    <string name="label_nav_share_genie">Share Genie</string>
    <string name="label_nav_notifications">Notifications</string>
    <string name="title_home_sync_genie_data">Sync Genie Data</string>
    <string name="title_home_my_lessons">My Lessons</string>
    <string name="title_home_my_text_books">My Books</string>
    <string name="label_home_onboarding_add_child">Add child/group</string>
    <string name="label_home_view_all">View All</string>
    <string name="label_home_new_label">New</string>
    <string name="label_home_change_subject">Change Subject</string>
    <string name="label_home_all_subjects">All Subjects</string>
    <string name="label_home_choose_subject">Choose a subject</string>
    <string name="label_home_default_subject">Choose subject</string>
    <string name="label_home_sync_now">Sync automatically if I am connected to Wifi/Internet</string>
    <string name="label_home_sync_later">Later</string>
    <string name="msg_home_end_of_content">You have reached the end of page, choose another subject for more content</string>
    <string name="msg_home_download_content">Get lessons from below.</string>
    <string name="msg_home_sync_dialog_prompt">Sync your data with Genie servers to get personalized recommendations and to help us improve our service.</string>
    <string name="error_home_genie_offline">Genie is offline, Please connect to internet !</string>
    <string name="error_home_no_network">Connect to internet to get more content</string>
    <string name="label_home_coming_soon">Coming soon</string>
    <string name="msg_home_packaging_genie">Packaging Genie&#8230;</string>
    <string name="change_subject">Change Subject</string>
    <string name="device_low_memory_error">Your device is running low on memory. Would you like to make some storage space free?</string>
    <string name="label_manage_memory">Manage Memory</string>
    <string name="label_discrepancy_found">Discrepancy found</string>
    <string name="label_discrepancy_deleted_plural">contents were deleted</string>
    <string name="label_discrepancy_deleted_singular">content was deleted</string>
    <string name="label_discrepancy_added_plural"> contents were added</string>
    <string name="label_discrepancy_added_singular">content was added</string>
    <string name="action_home_skip">Skip</string>
    <string name="label_home_onboarding_addchild_desc">Genie learns about you and suggest lessons that are just right for every child&#8230; Let\'s add a child!</string>
    <string name="title_addchild">Add Child</string>
    <string name="title_addchild_group">Add Group</string>
    <string name="title_addchild_edit">Edit Child details</string>
    <string name="title_addchild_edit_group">Edit Group details</string>
    <string name="label_addchild_pick_avatar">Pick  Avatar</string>
    <string name="label_addchild_avatar">Avatar</string>
    <string name="label_addchild_nick_name">Nick name</string>
    <string name="label_addchild_do_you">Do you want to be</string>
    <string name="label_addchild_or">or</string>
    <string name="label_addchild_how_old">How old are you ?</string>
    <string name="label_addchild_welcome_aboard">Welcome aboard</string>
    <string name="label_addchild_genie_star">Genie star!</string>
    <string name="label_addchild_class">Class</string>
    <string name="label_addchild_gender">Gender</string>
    <string name="label_addchild_others">Others</string>
    <string name="label_addchild_kg">KG</string>
    <string name="label_addchild_medium">Medium</string>
    <string name="label_addchild_board">Board</string>
    <string name="label_addchild_select">Select</string>
    <string name="label_addchild_enter_your_name">Enter your name</string>
    <string name="error_addchild_blank_nick_name">Nick name can not be just blanks, please try again&#8230;</string>
    <string name="error_notification_delete_failed">Deletion failed. PLease try again.</string>
    <string name="error_import_file_not_supported">Given file type is not supported</string>
    <string name="error_network">Could not connect to the Internet, or it is very slow. Please try again later. If it happens repeatedly, please contact help@ekstep.org.</string>
    <string name="error_db_operation">Unable read or write database</string>
    <string name="error_invalid_event">Current event is not a valid Telemetry event</string>
    <string name="error_sync_validation">There was an error syncing your data. Please try again later</string>
    <string name="error_network_1">It seems there is no internet connectivity</string>
    <string name="error_duplicate_file">File already exists or Genie is unable to create the file</string>
    <string name="error_procession_failed">Unable to process the data .Please try again</string>
    <string name="error_authentication_failed">Authentication failed .Please try again</string>
    <string name="error_network2">No Internet Connection. Please check your internet connection and try again.</string>
    <string name="error_timeout">There was an error in retrieving search results. Please try again later</string>
    <string name="error_import_device_merory_full">Import failed. Device memory full</string>
    <string name="error_import_insufficient_memory">Download failed. Insufficient space on your device.</string>
    <string name="errorr_import_lesson_expired">Import failed. Lesson expired</string>
    <string name="error_import_failed">Import Failed: There was a an error in importing the file.</string>
    <string name="error_import_file_exists">The file is already imported. Please select a new file</string>
    <string name="error_import_unsupported_manifest">Cannot import outdated ECAR!</string>
    <string name="error_import_not_compatible">Import failed. Lesson not supported by Genie</string>
    <string name="msg_import_successfull"> imported successfully </string>
    <string name="error_import_file_already_exists">This profile has already  been imported. </string>
    <string name="error_import_file_already_exists_1"> profile(s) has already  been imported. </string>
    <string name="error_import_failure"> import failed</string>
    <string name="title_dialog_end">Close Genie?</string>
    <string name="label_dialog_ok">Ok</string>
    <string name="label_dialog_yes">Yes</string>
    <string name="label_dialog_no">No</string>
    <string name="label_dialog_cancel">Cancel</string>
    <string name="action_dialog_update_now">Update Now</string>
    <string name="action_dialog_delete">Delete</string>
    <string name="action_dialog_progress">Progress</string>
    <string name="action_dialog_share">Share</string>
    <string name="action_dialog_move">Move</string>
    <string name="action_dialog_feedback">Feedback</string>
    <string name="action_dialog_view_details">View Details</string>
    <string name="msg_dialog_update_genie">Update now for a better experience!</string>
    <string name="msg_dialog_delete_confirmation">Are you sure that you want to delete?</string>
    <string name="msg_dialog_delete_confirmation_for_content_multiple_existence">This content is accessed elsewhere. Are you sure that you want to delete %1$s of content?</string>
    <string name="action_nav_drawer_open">Open navigation drawer</string>
    <string name="action_nav_drawer_close">Close navigation drawer</string>
    <string name="title_select_language">Select Language</string>
    <string name="label_language">Language</string>
    <string name="label_hindi">हिंदी</string>
    <string name="label_kannada">ಕನ್ನಡ</string>
    <string name="label_telugu">తెలుగు</string>
    <string name="label_marathi">मराठी</string>
    <string name="label_tamil">தமிழ்</string>
    <string name="label_punjabi">ਪੰਜਾਬੀ</string>
    <string name="title_children">Children</string>
    <string name="title_children_import_profile">Import Profile</string>
    <string name="title_children_groups">Groups</string>
    <string name="label_children_profile_age">Age:</string>
    <string name="label_children_class">Class:</string>
    <string name="label_children_other">Other</string>
    <string name="msg_children_profile_deletion_successful">User deleted successfully</string>
    <string name="msg_children_no_profile">No user yet</string>
    <string name="msg_children_start_adding_profile">Click on \"+\" to start adding user&#8230;</string>
    <string name="msg_children_fetching_profile">Getting profiles.. </string>
    <string name="label_settings_app_info">App info &amp; Credits</string>
    <string name="msg_setting_changing_language">Applying language changes..</string>
    <string name="title_sync_data_setting">Data Settings</string>
    <string name="title_sync_settings">Sync Settings</string>
    <string name="title_sync_data_sync_settings">Data Sync Settings</string>
    <string name="action_sync_now">Sync Now</string>
    <string name="label_sync_last_synced_time">Last sync</string>
    <string name="msg_sync_now">Sending data to the Genie servers enables us to recommend content most suitable for your child\'s needs. It also helps us make Genie better over time</string>
    <string name="msg_syncing">Syncing&#8230; Please wait</string>
    <string name="msg_sync_successfull">Success! Data synced successfully</string>
    <string name="title_data_synchronization_setting">Data Synchronization Settings</string>
    <string name="label_sync_manual">Manual</string>
    <string name="label_sync_manual_desc">We will remind you to sync data once in a while</string>
    <string name="label_auto_sync_using_wifi">Automatic Over Wifi</string>
    <string name="label_auto_sync_using_wifi_desc">Auto-sync when connected to internet over WiFi</string>
    <string name="label_auto_sync_using_wifi_and_cellular">Automatic whenever connected to the Internet</string>
    <string name="label_auto_sync_using_wifi_and_cellular_desc">Auto-sync when connected to internet in any way</string>
    <string name="title_about">About</string>
    <string name="label_about_device_id">Device ID</string>
    <string name="label_about_genie_version">Genie Version</string>
    <string name="label_about_privacy_policy">Privacy Policy</string>
    <string name="label_about_us">About us</string>
    <string name="label_about_tos">Terms of Service</string>
    <string name="title_advanced_settings">Advanced Settings</string>
    <string name="title_tag_add_new">Add new Tag</string>
    <string name="title_tag_program">Program Tags</string>
    <string name="label_tag_program_code">Program code/Tag</string>
    <string name="label_tag_short_desc">Short Description</string>
    <string name="label_tag_event_sched">Event Schedule</string>
    <string name="label_tag_start_date">Start Date</string>
    <string name="label_tag_end_date">End Date</string>
    <string name="msg_tag_added_sussessfully">Tag added successfully</string>
    <string name="msg_tag_updated_successfully">Tag updated successfully</string>
    <string name="msg_tag_not_available">No program tags yet</string>
    <string name="action_filter_apply">Apply</string>
    <string name="label_dummy_english">English</string>
    <string name="title_feedback">Feedback</string>
    <string name="action_all_edit">Edit&#160;&#160;&#160;</string>
    <string name="move">Move</string>
    <string name="dont_move_content">Do not move content</string>
    <string name="dont_move_content_description">Use new location, but do not move existing content</string>
    <string name="replace_content">Replace</string>
</resources>