<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_normal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/about_dialog_background"
        android:padding="@dimen/spacing_normal">

        <org.ekstep.genie.customview.EkStepCustomTextView
            android:id="@+id/txt_tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tag_program_code"
            android:textColor="@color/profile_background"
            android:textSize="@dimen/txt_size_15"
            android:textStyle="bold" />

        <org.ekstep.genie.customview.EkStepCustomTextView
            android:id="@+id/label_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/spacing_tiny"
            android:text="@string/action_dialog_delete"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_size_14" />

        <org.ekstep.genie.customview.EkStepCustomTextView
            android:id="@+id/label_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/label_delete"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/spacing_tiny"
            android:text="@string/action_all_edit"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_size_14" />

        <org.ekstep.genie.customview.EkStepCustomTextView
            android:id="@+id/txt_tag_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tag_name"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/label_tag_short_desc"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/txt_size_14"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tag_description"
            android:orientation="horizontal"
            android:visibility="gone">

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/txt_tag_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tag_start_date"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_12"
                android:visibility="gone" />

            <View
                android:id="@+id/view_date"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:visibility="gone" />

            <org.ekstep.genie.customview.EkStepCustomTextView
                android:id="@+id/txt_tag_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_tag_end_date"
                android:textColor="@color/profile_background"
                android:textSize="@dimen/txt_size_12"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>