<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_20">

    <TextView
        android:id="@+id/tv_set_default_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_set_default_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_set_default_title"
        android:layout_marginTop="@dimen/dp_5"
        android:lines="2"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_move_dont_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_set_default_desc"
        android:orientation="vertical">

        <org.ekstep.genie.customview.EkStepRadioGroup
            android:id="@+id/rb_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_2"
            android:text="@string/move"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_16"
            android:textStyle="bold"
            android:theme="@style/EkstepCheckBox" />

        <TextView
            android:id="@+id/tv_move_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_30" />

        <org.ekstep.genie.customview.EkStepRadioGroup
            android:id="@+id/rb_replace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_16"
            android:textStyle="bold"
            android:theme="@style/EkstepCheckBox" />

        <TextView
            android:id="@+id/tv_replace_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_30" />

        <org.ekstep.genie.customview.EkStepRadioGroup
            android:id="@+id/rb_dont_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_move_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_size_16"
            android:textStyle="bold"
            android:theme="@style/EkstepCheckBox" />

        <TextView
            android:id="@+id/tv_dont_move_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_30"
            android:text="@string/dont_move_content_description" />
    </RadioGroup>

</RelativeLayout>